Made some design changes, created the support page, and a few other changes
- Added links to the YouTube and Instagram icons. Still need to add a link for the Twitter account.
- Added a "Content" icon on the navigation bar.
- Created the "Support" page and created css for it.
- Added the Patreon button to the support page along with information about what Patrons will get.
- Redesigned the background and moved the background image to just cover the back of the #showcase.
	○ Changed the color of the text to white and added a black background so it looks better.
- Changed the background in the "Portfolio" page to white. I'll be removing the chart background form all the pages and keeping them white so a more minimalist aesthetic.
Other smaller changes in the "Portfolio" page.

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <header id="header-bar" class="header-grid">
         <div class="bg-image"></div>
         <div class="header-media">
-            <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
             <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
@@ -29,6 +29,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="journals.html">Stock Analysis</a></li>
+                    <li><a href="content.html">Content</a></li>
                  </ul>
              </nav>
         </div>
