--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
    <header id="header-bar" class="header-grid">
        <div class="bg-image"></div>
        <div class="header-media">
-        <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
         <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
        </div>
        <!-- I still need to create and add the social media links -->
        <div class="logo-nav">
@@ -31,6 +31,7 @@
                    <li><a href="about.html">About</a></li>
                    <li><a href="portfolio.html">Portfolio</a></li>
                    <li><a href="journals.html">Stock Analysis</a></li>
+                   <li><a href="content.html">Content</a></li>
                 </ul>
             </nav>
         </div>
@@ -262,12 +263,13 @@
             </section>
         
 
-            <hr class="page-divider">
+            <hr id="page-divider">
             <!-- Watchlists section -->
             <section class="watchlists-grid">
                 <!-- Investment watchlist -->
                 <div class="investment-watchlist">
                     <h2>Investments Watchlist</h2>
+                    <hr class="watchlist-divider">
                     <div class="watchlist-invest-stock">
                         <h3>ADBE</h3>
                         <h4>Adobe, Inc.</h2>
@@ -373,6 +375,7 @@
                 <!-- Trading watchlist -->
                 <div class="trading-watchlist">
                     <h2>Trades Watchlist</h2>
+                    <hr class="watchlist-divider">
                     <div class="watchlist-trade-stock">
                         <h3>SQ</h3>
                         <h4>Square, Inc.</h2>
