--- a/support.html
+++ b/support.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Support</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/support-style.css">
 </head>
 <body>
     <!-- Header -->
     <header id="header-bar" class="header-grid">
+        <div class="bg-image"></div>
         <div class="header-media">
-            <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
             <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
@@ -36,7 +38,27 @@
 
     <!-- Main content -->
     <main>
-        
+        <div class="wrapper">
+            <section class="support-text">
+                <h3>Support The MarketPal</h3>
+            </section>
+            <section class="support-content">
+                <h4>The MarketPal Patreon</h4>
+                <ul>
+                    <p>Join the patreon to support the website and other content. Those who choose to support the website will get access to additional content as a thank you for their support. Some of the content you can expect would be but is not limited to:</p>
+                    <li>The ability to see every move that's made, which includes the purchase of new stocks, price, why the stock was purchased, amongst a few other details.</li>
+                    <li>You'll be able to submit your own analysis research papers for stocks of your choice that will be published on the "Stock Analysis" section of the website. If you do choose to submit one of your own stock analysis papers, you'll be able to submit your paper to my email along with your name on Patreon to varify. You'll also have the option to include any personal information about yourself for exposure, e.g., social media such as Instagram, YouTube channel, Twitter, etc., or other acceptable content you've created for exposure.</li>
+                    <li>There will also be more content added to the Patreon as time goes on and recommendations for new content by you and other Patrons are welcome.</li>
+                </ul>
+            </section>
+            <div class="support-button-container">
+                <h4>Join the Patreon at the link below</h4>
+                <p>Your support is greatly appriciated</p>
+                <div class="support-button">
+                    <a href="https://www.patreon.com/bePatron?u=35386700" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+                </div>
+            </div>
+        </div>
     </main>
 
         <!-- Footer content -->
