made some changes to the text in main-box on index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <section class="main-container">
                     <div class="main-box">
                         <h2>New to Investing?</h2>
-                        <p>Learning to invest properly can be challenging when you don't know what to look for and how to find it. We've compiled a bunch of different resources from various places to help you find what you need to know in order to speed up the learning process.</p>
+                        <p>Learning to invest properly can be challenging when you don't know where and how to find the information you need. I've compiled a bunch of different resources from various places to help you find what you need to know in order to speed up the learning process.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                     <div class="box2">
