Made changes to index.html and created resources.html
- Changed text content for main-box in index.html.
- Added "Coming Soon" to podcast box in index.html.
- Created resources page, added contents for first container, and started styling it.

--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
                 <section class="main-container">
                     <div class="main-box">
                         <h2>New to Investing?</h2>
-                        <p>Learning to invest properly can be challenging when you don't know where and how to find the information you need. I've compiled a bunch of different resources from various places to help you find what you need to know in order to speed up the learning process.</p>
-                        <a href="#" class="btn">Read More</a>
+                        <p>Learning to invest properly can be challenging when you don't know where and how to find the information you need. Speech up the learning process by using the resouces I've listed from various sources to bring the information to you so you don't waste time having to figure out where to find what you need.</p>
+                        <a href="resources.html" class="btn">Read More</a>
                     </div>
                     <div class="box2">
                         <h2>Check out the Podcast</h2>
+                        <h2>(Coming Soon)</h2>
                         <i class="fas fa-microphone fa-2x"></i>
-                        <a href="#" class="btn">Listen Now</a>
+                        <a href="coming_soon.html" class="btn">Learn More</a>
                     </div>
                     <div class="box3">
                         <h2>Sign Up for the Weekly Newsletter</h2>
