Added missing links to resources on resources page and change the tab title

--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Resources</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/resources-style.css">
 </head>
@@ -58,7 +58,7 @@
                     <img src="img/chart-on-mac-screen.jpg" alt="Stock Chart">
                 </div>
                 <div class="resource-info">
-                    <a href="">
+                    <a href="https://www.investopedia.com/terms/i/intrinsicvalue.asp" target="_blank">
                         <div class="resource-description">
                             <h3>Intrinsic Value Definition</h3>
                             <p>Finding the intrinsic value is one of the first and most important steps when researching a company and it is very important to know both what it is, and how to calculate it.</p>
@@ -67,7 +67,7 @@
                     <img src="img/stock-chart.jpg" alt="Stock market chart">
                 </div>
                 <div class="resource-info">
-                    <a href="">
+                    <a href="https://www.investopedia.com/terms/m/marketcapitalization.asp" target="_blank">
                         <div class="resource-description">
                             <h3>Market Capitalization Definition</h3>
                             <p>Knowing what the market cap of a company is and how to calculate it is quite handy. I personally use the market cap formula after finding a company's intrinsic value. I will take the intrinsic value I found and multiply by the number of outstanding shares to get the market cap a company would have at the stock price I plug into the formula.</p>
@@ -76,7 +76,7 @@
                     <img src="img/stock-exchange-board.jpg" alt="Stock exchange board">
                 </div>
                 <div class="resource-info">
-                    <a href="">
+                    <a href="https://www.investopedia.com/terms/p/price-to-bookratio.asp" target="_blank">
                         <div class="resource-description">
                             <h3>Price-to-Book Ratio (PB Ratio) Definition</h3>
                             <p>Another good metric to see if a stock is over or undervalued. The plus with using this metric is that it's much quicker and easier to calculate.</p>
@@ -85,7 +85,7 @@
                     <img src="img/accounting-coin-pic.jpg" alt="Accounting">
                 </div>
                 <div class="resource-info">
-                    <a href="">
+                    <a href="https://www.investopedia.com/terms/p/price-earningsratio.asp" target="_blank">
                         <div class="resource-description">
                             <h3>Price-to-Earnings Ratio - PE Ration Definition</h3>
                             <p>Another very handy metric to understand because you'll come across it very often and it's very useful to understand it's use.</p>
