--- a/resources.html
+++ b/resources.html
@@ -27,8 +27,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="journals.html">Stock Analysis</a></li>
-                    <li><a href="content.html">Content</a></li>
+                    <li><a href="analysis.html">Stock Analysis</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
