Updated About page and stock analysis page
- created and styled atvi page
- Updated about pack

--- a/about.html
+++ b/about.html
@@ -47,6 +47,13 @@
                     That’s not to say that you shouldn’t always find your own sources and do your own research. But it’s always nice to have a place to start, especially if you’re just starting out.
                 </p>
                 <br class="about-section-divider">
+                <h3>What are the stock analysis research papers all about?</h3>
+                <p>Every other week on Sundays, I'll release a new stock analysis research paper. In these research papers I'll go over the most important information about a stock that any investor should be looking for when researching a company to invest in. This is a process that takes hours and can get quite boring and tedious for a lot of people, with having to read 100+ page reports, filings, listen to earnings calls, any much more additional research. These analysis papers take all of that information and give you the important fundamental aspects of the business that you should know and understand so that you can go off and continue doing additional research on your own. The checklist of criteria I look for in any company includes the following.</p>        
+                <br class="about-section-divider">
+                <img src="img/stock-criteria-checklist.svg" alt="Stocks">
+                <br class="about-section-divider">
+                <p>Even though these analysis papers are meant to take a lot of the repetative and tedious work out of the equation to make it easier for you to get started on your investing journey or just save you some time in your day, I would still highly recommend you learn the concepts and information I go over and learn to do your own research as well, so you're not completely lost when reading through the analysis of a company. Information about the checklist of criteria I look for can be found on the "Resources" page on the website. Much more information and resources will be added as time goes on so you don't have to go on a hunt all over the internet to find the knowledge you need.</p>
+                <br class="about-section-divider">
                 <h3>Who I Am</h3>
                 <p>My name is Anthony and I’m just someone who enjoys talking all about the stock market. I dedicate a lot of time to it and I get a huge sense of satisfaction and enjoyment about investing, It’s something I’m very passionate about and although I’m not a financial advisor by any means, I’m always learning and improving alongside those who follow what I do. Investing is a very interesting and amazing thing and what isn’t there to love about it.</p>
             </div>
