--- a/analysis.html
+++ b/analysis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Stock Analysis</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/analysis-style.css">
 </head>
@@ -41,10 +41,16 @@
             <section class="content-overview-container">
                 <h3>Welcome to the stock analysis page!</h3>
                 <p>Every other week there will be a new analysis on a stock that hasn't been analyzed before on the website. Information about these analysis papers and what they're all about can be found in the "About" page. It's a short read and it's recommended you look through it so you understand what this research is all about and how it can help you.</p>
-
-            <!-- Main page content -->
             </section>
+            <!-- Main page content -->
             <section class="analysis-container">
+                <div class="analysis-content">
+                    <p>5/18/2020</p>
+                    <h3>NASDAQ: ATVI</h3>
+                    <h4>Activision Blizzard, Inc.</h4>
+                    <a href="analysis-links/atvi.html" class="link">Read More</a>
+                </div>
+                <hr>
                 <div class="analysis-content">
                     <p>5/18/2020</p>
                     <h3>NASDAQ: NVDA</h3>
@@ -57,13 +63,6 @@
                     <h3>NYSE: FL</h3>
                     <h4>Foot Locker, Inc.</h4>
                     <a href="analysis-links/fl.html" class="link">Read More</a>
-                </div>
-                <hr>
-                <div class="analysis-content">
-                    <p>5/18/2020</p>
-                    <h3>ATVI</h3>
-                    <h4>Activision Blizzard, Inc.</h4>
-                    <a href="analysis-links/atvi.html" class="link">Read More</a>
                 </div>
                 <hr>
                 <!-- 
