--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
     <title>The MarketPal</title>
     <link rel="stylesheet" href="css/index-style.css">
+    <script data-ad-client="ca-pub-7533576871166781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
@@ -66,7 +67,7 @@
                 "title": "ETH/USD"
             }
             ],
-            "colorTheme": "dark",
+            "colorTheme": "light",
             "isTransparent": true,
             "displayMode": "adaptive",
             "locale": "en"
@@ -80,10 +81,10 @@
             <section id="showcase" class="grid">
                 <div class="bg-image"></div>
                 <div class="showcase-content">
-                    <h2>Check Out the Monthly Calendar</h2>
-                    <p>Find information and updates on new YouTube videos, Podcast episodes, Analysis Journals, Portfolio Earnings, and Much more.</p>
+                    <h2>The Bullish Newsletter</h2>
+                    <p>I will send out a newsletter every Monday morning. In these newsletters, you will recieve thoughts, ideas, tips, recommendations, resources, and many other things that will help you as an investor.</p>
                 </div>
-                <a href="#" class="btn">Check it Out</a>
+                <a href="newsletter.html" class="btn">Sign Up</a>
             </section>
             
             <!-- Main Body -->
@@ -107,9 +108,9 @@
                         <a href="coming_soon.html" class="btn">Learn More</a>
                     </div>
                     <div class="box3">
-                        <h2>Sign Up for the Weekly Newsletter</h2>
-                        <i class="far fa-newspaper fa-2x"></i>
-                        <a href="newsletter.html" class="btn">Sign Up</a>
+                        <h2>Check out the Monthly Calendar</h2>
+                        <i class="far fa-calendar-alt fa-2x"></i>
+                        <a href="#" class="btn">Check it Out</a>
                     </div>
                 </section>
         </div>
