--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                 "title": "ETH/USD"
             }
             ],
-            "colorTheme": "dark",
+            "colorTheme": "light",
             "isTransparent": true,
             "displayMode": "adaptive",
             "locale": "en"
@@ -90,12 +90,12 @@
                         <!-- TradingView Widget BEGIN -->
                         <div class="tradingview-widget-container">
                             <div class="tradingview-widget-container__widget"></div>
-                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-FB/" rel="noopener" target="_blank"><span class="blue-text">FB Quotes</span></a> by TradingView</div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/FB/" rel="noopener" target="_blank"><span class="blue-text">FB Quotes</span></a> by TradingView</div>
                             <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
                             {
-                            "symbol": "NASDAQ:FB",
+                            "symbol": "FB",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -116,7 +116,7 @@
                             {
                             "symbol": "NYSE:FL",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -137,7 +137,7 @@
                             {
                             "symbol": "NASDAQ:ATVI",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -157,7 +157,7 @@
                         {
                         "symbol": "NYSE:ELF",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -176,7 +176,7 @@
                         {
                         "symbol": "NASDAQ:GOOG",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -195,7 +195,7 @@
                         {
                         "symbol": "NYSE:RVLV",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -214,7 +214,7 @@
                         {
                         "symbol": "NASDAQ:SWKS",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -233,7 +233,7 @@
                         {
                         "symbol": "NASDAQ:TSLA",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -252,7 +252,7 @@
                         {
                         "symbol": "NASDAQ:TSLA",
                         "width": "100%",
-                        "colorTheme": "dark",
+                        "colorTheme": "light",
                         "isTransparent": true,
                         "locale": "en"
                     }
@@ -261,9 +261,11 @@
                     <!-- TradingView Widget END -->
                 </div>
             </section>
-        
+            
+            <div class="page-divider-container">
+                <hr id="page-divider">
+            </div>
 
-            <hr id="page-divider">
             <!-- Watchlists section -->
             <section class="watchlists-grid">
                 <!-- Investment watchlist -->
@@ -281,7 +283,7 @@
                                 {
                                 "symbol": "ADBE",
                                 "width": "100%",
-                                "colorTheme": "dark",
+                                "colorTheme": "light",
                                 "isTransparent": true,
                                 "locale": "en"
                             }
@@ -301,7 +303,7 @@
                             {
                             "symbol": "NASDAQ:AAPL",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -321,7 +323,7 @@
                             {
                             "symbol": "NVDA",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -341,7 +343,7 @@
                             {
                             "symbol": "NASDAQ:PYPL",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -361,7 +363,7 @@
                             {
                             "symbol": "NYSE:NKE",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -387,7 +389,7 @@
                                 {
                                 "symbol": "SQ",
                                 "width": "100%",
-                                "colorTheme": "dark",
+                                "colorTheme": "light",
                                 "isTransparent": true,
                                 "locale": "en"
                             }
@@ -407,7 +409,7 @@
                             {
                             "symbol": "NYSE:TWTR",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
@@ -427,7 +429,7 @@
                             {
                             "symbol": "NYSE:SCHW",
                             "width": "100%",
-                            "colorTheme": "dark",
+                            "colorTheme": "light",
                             "isTransparent": true,
                             "locale": "en"
                         }
