Added extr content and created content page for podcast
- Added additional info in the "About" page.
- Created content page for podcast, styled it, and added link to the newsletter

--- a/about.html
+++ b/about.html
@@ -42,10 +42,13 @@
         <section class="contact-us">
             <div class="box-wrapper">
                 <p>
-                    Hi, I’m Anthony, the creator of The MarketPal. This website was meant to help investors and those who want to learn to invest, find a place they can go to in order to start their research, find learning tools, and ideas instead of going all over the internet looking for it.
-                    <br>
-                    That’s not to say that you shouldn’t always find your own sources and do your own research. But it’s always nice to have a place to start, especially if you’re just starting out.
+                    Hi, I’m Anthony, the creator of The MarketPal. This website is meant to help investors and those who want to learn to invest, find the necessary research they need to analyze a company before they invest in it. Here you will find helpful resources such as the stock analysis research papers, blogs, a newsletter, and sources of information you can go to instead of looking all over the internet for them. Especially if you're a beginner and don't know where to start.
                 </p>
+                <br>
+                <h3>Scheduled Times:</h3>
+                <p><b>Stock analysis research papers:</b> Biweekly on Mondays</p>
+                <p><b>Newsletters:</b> Every Monday</p>
+                <p><b>Blogs:</b> Fridays</p>
                 <br class="about-section-divider">
                 <h3>What are the stock analysis research papers all about?</h3>
                 <p>Every other week on Sundays, I'll release a new stock analysis research paper. In these research papers I'll go over the most important information about a stock that any investor should be looking for when researching a company to invest in. This is a process that takes hours and can get quite boring and tedious for a lot of people, with having to read 100+ page reports, filings, listen to earnings calls, any much more additional research. These analysis papers take all of that information and give you the important fundamental aspects of the business that you should know and understand so that you can go off and continue doing additional research on your own. The checklist of criteria I look for in any company includes the following.</p>        
