--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- Header -->
    <header id="header-bar" class="header-grid">
        <div class="header-media">
-           <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
-           <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-           <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+           <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+           <a href="https://twitter.com/themarketpal" title="Follow on Twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+           <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <!-- I still need to create and add the social media links -->
         <div class="logo-nav">
@@ -105,12 +105,12 @@
                         <h2>Check out the Podcast</h2>
                         <h2>(Coming Soon)</h2>
                         <i class="fas fa-microphone fa-2x"></i>
-                        <a href="coming_soon.html" class="btn">Learn More</a>
+                        <a href="content.html" class="btn">Learn More</a>
                     </div>
                     <div class="box3">
                         <h2>Check out the Monthly Calendar</h2>
                         <i class="far fa-calendar-alt fa-2x"></i>
-                        <a href="#" class="btn">Check it Out</a>
+                        <a href="calendar.html" class="btn">Check it Out</a>
                     </div>
                 </section>
         </div>
