Updated index.thml and resources.html
- Moved resources link to box 3.
- Created modal for main-box in index.html.
- Added the Google Calendar iframe to main-box.

--- a/analysis-pages/atvi.html
+++ b/analysis-pages/atvi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Stock Analysis</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/analysis-style.css">
+    <title>ATVI Stock Analysis</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/stock-analysis-style.css">
 </head>
 <body>
     <!-- Header -->
@@ -25,11 +25,11 @@
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../portfolio.html">Portfolio</a></li>
+                    <li><a href="../analysis.html">Stock Analysis</a></li>
+                    <li><a href="../blog.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,34 +38,25 @@
 
     <!-- Main content -->
     <main>
-        <div class="wrapper">
-            <section class="content-overview-container">
-                <h3>Welcome to the stock analysis page!</h3>
-                <p>Every other week there will be a new analysis on a stock that hasn't been analyzed before on the website. Information about these analysis papers and what they're all about can be found in the "About" page. It's a short read and it's recommended you look through it so you understand what this research is all about and how it can help you.</p>
-            </section>
-            <!-- Main page content -->
-            <!-- ATVI stock analysis post -->
-            <section class="analysis-container">
-                <div class="analysis-content">
-                    <p>5/18/2020</p>
-                    <h3>NASDAQ: ATVI</h3>
-                    <h4>Activision Blizzard, Inc.</h4>
-                    <a href="analysis-pages/atvi.html">Read More</a>
+        <section class="analysis-container">
+            <div class="analysis-content">
+                <p>5/18/2020</p>
+                <h3>ATVI</h3>
+                <h4>Activision Blizzard, Inc.</h4>
+                <div class="img-container">
+                    <img src="../img/activision-blizzard-logo.png" alt="Activision Blizzard">
                 </div>
-                <hr>
-                <!-- 
-                    <div class="analysis-content">
-                        <p>5/18/2020</p>
-                        <h3></h3>
-                        <h4></h4>
-                        <a href="#" class="link">Read More</a>
-                    </div>
-                    <hr>
-                -->
+            </div>
+            <hr>
+            <section class="analysis-description">
+                <h3>Comments on the stock:</h3>
+                <p>As it currently stands, ATVI is seems to be a very solid investment for a long term hold and would be a great addition to someone's portfolio. However, the valuation currently seems a bit high, but who knows when we could see a drop in price.</p>
+                <img src="../img/atvi-criteria.svg" alt="Activision Blizzard">
             </section>
-        </div>
+            <a href="pdfs/atvi-coming-soon.pdf" class="btn" download>Download PDF of analysis paper</a>
+        </section>
     </main>
-            
+
     <!-- Footer content -->
     <footer class="main-footer">
         <div class="social-media">
