--- a/blog.html
+++ b/blog.html
@@ -12,9 +12,10 @@
     <!-- Header -->
     <header id="header-bar" class="header-grid">
         <div class="header-media">
-            <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.youtube.com/channel/UCYwnLf_Unhw_YWtCS8CZBLw?guided_help_flow=3&disable_polymer=true" title="Subscribe on YouTube" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="https://twitter.com/themarketpal" title="Follow on Twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.instagram.com/themarketpal/" title="Follow the Instagram" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/The-MarketPal-101010118300279/?modal=admin_todo_tour" title="Follow the Facebook page" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
