--- a/support.html
+++ b/support.html
@@ -14,8 +14,9 @@
         <div class="bg-image"></div>
         <div class="header-media">
             <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://twitter.com/themarketpal" title="Follow on Twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
             <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/The-MarketPal-101010118300279/?modal=admin_todo_tour" title="Follow the Facebook page" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
